tirtha missing papers

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -2860,20 +2860,6 @@
   mrclass: '90D12 (68T05)'
   volume: '20'
 
-- number: '6'
-  author: 'Basu, Arnab and Ghosh, Mrinal K.'
-  fjournal: 'Operations Research Letters'
-  url: 'http://dx.doi.org/10.1016/j.orl.2009.06.005'
-  pages: '415-419'
-  year: '2009'
-  title: 'Asymptotic analysis of option pricing in a Markov modulated market'
-  doi: '10.1016/j.orl.2009.06.005'
-  issn: '0167-6377'
-  journal: 'Oper. Res. Lett.'
-  mrnumber: '2552716'
-  mrclass: '91G20'
-  volume: '37'
-
 - number: '1'
   author: 'Bhattacharyya, T. and Eschmeier, J. and Sarkar, J.'
   fjournal: 'Integral Equations and Operator Theory'
@@ -3100,6 +3086,35 @@
   mrnumber: '2287582'
   mrclass: '01A90'
   volume: '92'
+
+- number: '4'
+  author: 'Bhattacharyya, Tirthankar and Ko&#353;ir, Toma&#382;'
+  fjournal: 'Integral Equations and Operator Theory'
+  url: 'https://doi.org/10.1007/BF01203319'
+  pages: '377-386'
+  year: '2001'
+  mrreviewer: 'Volodymyr Derkach'
+  title: 'On commuting compact self-adjoint operators on a Pontryagin space'
+  doi: '10.1007/BF01203319'
+  issn: '0378-620X'
+  journal: 'Integral Equations Operator Theory'
+  mrnumber: '1829275'
+  mrclass: '47B50'
+  volume: '39'
+
+- number: '6'
+  author: 'Basu, Arnab and Ghosh, Mrinal K.'
+  fjournal: 'Operations Research Letters'
+  url: 'http://dx.doi.org/10.1016/j.orl.2009.06.005'
+  pages: '415-419'
+  year: '2009'
+  title: 'Asymptotic analysis of option pricing in a Markov modulated market'
+  doi: '10.1016/j.orl.2009.06.005'
+  issn: '0167-6377'
+  journal: 'Oper. Res. Lett.'
+  mrnumber: '2552716'
+  mrclass: '91G20'
+  volume: '37'
 
 - number: '4'
   author: 'Sarkar, Rudra P. and Thangavelu, Sundaram'
@@ -4083,7 +4098,7 @@
   year: '2001'
   publisher: 'Springer, Berlin'
   booktitle: 'Applied algebra, algebraic algorithms and error-correcting codes (Melbourne, 2001)'
-  title: '$\bold F_q$-linear cyclic codes over $\bold F_{q^m}$: DFT characterization'
+  title: '$\boldsymbol F_q$-linear cyclic codes over $\boldsymbol F_{q^m}$: DFT characterization'
   doi: '10.1007/3-540-45624-4_7'
   author: 'Dey, Bikash Kumar and Rajan, B. Sundar'
   series: 'Lecture Notes in Comput. Sci.'
@@ -11164,7 +11179,7 @@
   pages: '299-316'
   year: '2014'
   mrreviewer: 'Lucas J&oacute;dar'
-  title: 'Babu\vska&#39;s penalty method for inhomogeneous Dirichlet problem: error estimates and multigrid algorithms'
+  title: 'Babu&#353;ka&#39;s penalty method for inhomogeneous Dirichlet problem: error estimates and multigrid algorithms'
   issn: '1923-2942'
   journal: 'Int. J. Numer. Anal. Model. Ser. B'
   mrnumber: '3320530'
@@ -11574,20 +11589,6 @@
   mrclass: '53C25 (30G35 53C12)'
   volume: '17'
 
-- url: 'http://dx.doi.org/10.1090/conm/435/08372'
-  mrnumber: '2359424'
-  pages: '143-152'
-  year: '2007'
-  booktitle: 'Function spaces'
-  title: 'Strongly proximinal subspaces in Banach spaces'
-  doi: '10.1090/conm/435/08372'
-  author: 'Dutta, S. and Narayana, Darapaneni'
-  series: 'Contemp. Math.'
-  mrreviewer: 'T. S. S. R. K. Rao'
-  publisher: 'Amer. Math. Soc., Providence, RI'
-  mrclass: '41A65 (46B20)'
-  volume: '435'
-
 - number: '2'
   author: 'Ghosh, Mrinal K. and Goswami, Anindya and Kumar, Suresh K.'
   fjournal: 'Applied Mathematics and Optimization'
@@ -11805,6 +11806,35 @@
   mrnumber: '3576713'
   mrclass: '62N01 (62G05 62N02 62N05 62P20)'
   volume: '46'
+
+- number: '1'
+  author: 'Bhattacharya, T. and Binding, P. A. and Seddighi, K.'
+  fjournal: 'Proceedings of the Royal Society of Edinburgh. Section A. Mathematics'
+  url: 'https://doi.org/10.1017/S0308210500000780'
+  pages: '45-58'
+  year: '2001'
+  mrreviewer: 'Jan Bochenek'
+  title: 'Two-parameter right definite Sturm-Liouville problems with eigenparameter-dependent boundary conditions'
+  doi: '10.1017/S0308210500000780'
+  issn: '0308-2105'
+  journal: 'Proc. Roy. Soc. Edinburgh Sect. A'
+  mrnumber: '1820294'
+  mrclass: '34B24'
+  volume: '131'
+
+- url: 'http://dx.doi.org/10.1090/conm/435/08372'
+  mrnumber: '2359424'
+  pages: '143-152'
+  year: '2007'
+  booktitle: 'Function spaces'
+  title: 'Strongly proximinal subspaces in Banach spaces'
+  doi: '10.1090/conm/435/08372'
+  author: 'Dutta, S. and Narayana, Darapaneni'
+  series: 'Contemp. Math.'
+  mrreviewer: 'T. S. S. R. K. Rao'
+  publisher: 'Amer. Math. Soc., Providence, RI'
+  mrclass: '41A65 (46B20)'
+  volume: '435'
 
 - number: '9'
   author: 'Chaudhuri, N. and Unterreiter, A.'
