more tirtha fixing.

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -36,6 +36,7 @@
   author-names:
     - "Bhattacharyya, Tirthankar"
     - "Bhattacharyya, T."
+    - "Bhattacharya, T."
 
 - name: Soumya Das
   user-id: soumya
