--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -2505,7 +2505,7 @@
   volume: '71'
 
 - number: '3'
-  author: 'Bhattacharyya, Tirthankar and Ko&#353;ir, Toma\v z and Plestenjak, Bor'
+  author: 'Bhattacharyya, Tirthankar and Ko&#353;ir, Toma&#382; and Plestenjak, Bor'
   fjournal: 'Proceedings of the Edinburgh Mathematical Society. Series II'
   url: 'http://dx.doi.org/10.1017/S0013091501000207'
   pages: '565-578'
