news and PDF update

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -38,6 +38,9 @@
 - name	:	Kaustubh Manchanda (Ph.D., JNU)
   user-id	:	kaustubhm
 
+- name	:	 Anirudha Poria  (Ph.D., IIT Guwahati)
+  user-id	:	anirudhap
+
 - name	:	 Vishnu Priya Nataraj (Ph.D., Bharathidasan University, Tamilnadu)
   user-id	:	vishnupriyan
 
