--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -227,7 +227,7 @@ aug2019:
     code: MA 395
     prereq-courses: ''
     ug-prereq-courses: ''
-    venue: LH-3
+    venue: LH-3/LH-1
   - name: Large Deviations
     code: MA 396
     instructor: Anirban Basak
