--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -4,6 +4,9 @@
 - name: Kiran Kumar Behera (Ph.D., IIT Rourkee)
   user-id: kiranbehera
 
+- name: Sudip Bera (Ph.D., Visva-Bharati University)
+  user-id: sudipbera
+
 - name  :       Projesh Nath Choudhury (Ph.D., IIT Madras)
   user-id       :       projeshc
 
