--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -12,6 +12,6 @@
 
 
 - name: Sushma Palimar, (Ph.D., NITK, Surathkal)
-  position: DST Woman Scientist
+  position: DST-Women Scientist (A)
   research-areas: Algebraic number theory
   user-id : sushma16
