--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -60,7 +60,7 @@
   user-id	:	anirudhap
   position: UGC Kothari
 
-- name: Tamal Pramanick (NBHM) (Ph.D., IIT Guwahati)
+- name: Tamal Pramanick  (Ph.D., IIT Guwahati)
   user-id: tamalp
   position: NBHM
 
@@ -73,7 +73,7 @@
   user-id: bikramadityas
   position: NBHM
 
-- name	:	Srijan Sarkar (NBHM) (Ph.D., ISI Bangalore)
+- name	:	Srijan Sarkar  (Ph.D., ISI Bangalore)
   user-id: srijans
   position: NBHM
 
