--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -34,7 +34,7 @@
   user-id: divyakhurana
   position: UGC Kothari
 
-- name: Arun Maiti
+- name: Arun Maiti (Ph.D., Universitat Leipzig)
   user-id: arunmaiti
   position: NBHM
 
@@ -64,14 +64,15 @@
   user-id: tamalp
   position: NBHM
 
+- name: Bikramaditya Sahu (Ph.D., NISER Bhubaneshwar)
+  user-id: bikramadityas
+  position: NBHM
+
 
 - name : Debamalya Sain (Ph.D., Jadavpur)
   user-id: debamalyasain
   position: UGC Kothari
 
-- name: Bikramaditya Sahu (Ph.D., NISER Bhubaneshwar)
-  user-id: bikramadityas
-  position: NBHM
 
 - name	:	Srijan Sarkar  (Ph.D., ISI Bangalore)
   user-id: srijans
