--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -197,7 +197,7 @@ aug2019:
     code: MA 333
     instructor: Ved Datar
     timing: 'Tue, Thu: 10:00-11:30'
-    venue: LH-3
+    venue: LH-1/LH-3
   - name: Matrix Analysis & positivity
     instructor: Apoorva Khare
     timing: 'Tue, Thu: 3:30-5:00'
