--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -2,7 +2,7 @@
   user-id       :       mamtabalodi
   position: IISc Raman PDF
 
-- name: Kiran Kumar Behera (Ph.D., IIT Rourkee)
+- name: Kiran Kumar Behera (Ph.D., IIT Roorkee)
   user-id: kiranbehera
   position: UGC Kothari
 
