--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -218,7 +218,7 @@
   year-of-joining: 2016
   programme: Integrated PhD
 
-- name	:	Ragavendra Tripathi
+- name	:	Raghavendra Tripathi
   user-id	:	ragavendrat
   year-of-joining: 2016
   programme: Integrated PhD
