some faculty details

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -75,6 +75,13 @@
   office: N15
   author-name: Gadgil, Siddhartha
 
+- name: Radhika Ganapathy
+  user-id: radhikag
+  research-areas: Representation Theory, Number Theory, Algebraic Groups
+  office: X23 
+  phd: Purdue
+  author-name: Ganapathy, R
+
 - name: Mrinal K. Ghosh
   user-id: mkg
   position: Professor
