photos, faculty data

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -77,7 +77,7 @@
 
 - name: Radhika Ganapathy
   user-id: radhikag
-  research-areas: Representation Theory, Number Theory, Algebraic Groups
+  research-areas: Representation Theory
   office: X23 
   phd: Purdue
   author-name: Ganapathy, R
