more student photos

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -124,12 +124,14 @@
   user-id	:	gsubhajit
   year-of-joining: 2013
   programme: Integrated PhD
+  image: true
 
 
 - name	:	Anindya Biswas
   user-id	:	anindyab
   year-of-joining: 2014
   programme: Integrated PhD
+  image: true
 
 
 - name	:	Rahul Biswas
