--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -164,6 +164,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   webpage: https://sruthisekar.wordpress.com/
+  image: true
 
 - name	:	Abu Sufian
   user-id	:	abusufian
