--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -151,6 +151,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   webpage: https://sites.google.com/view/nidhirathi/about
+  image: true
 
 
 - name	:	Ramesh Chandra Sau
