--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -215,6 +215,7 @@
   user-id	:	pritamg
   year-of-joining: 2016
   programme: Integrated PhD
+  image: true
 
 - name	:	Poornendu Kumar
   user-id	:	poornenduk
