photo optional for Inspire

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -8,6 +8,7 @@
   position: Inspire Fellow
   research-areas: Operator theory
   user-id: surjitkumar
+  image: true
   # webpage: http://math.iisc.ac.in/~surjitk15
 
 
@@ -15,3 +16,4 @@
   position: DST-Women Scientist (A)
   research-areas: Algebraic number theory
   user-id : sushma16
+  image: true
