--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -3,8 +3,8 @@
   year-of-joining: 2013
   programme: PhD
   webpage	:	http://www.math.iisc.ac.in/~rakesh13/index.html
-  guide: yet to decide
-  scholarship: IISc
+  guide: S. Thangavelu
+  scholarship: CSIR
 
 
 
@@ -13,68 +13,68 @@
   year-of-joining: 2014
   programme: PhD
   webpage	:	https://sites.google.com/view/pramathanamby/home
-  guide: yet to decide
-  scholarship: IISc
+  guide: Soumya Das
+  scholarship: Inspire 
 
 
 - name	:	Ritwik Pal
   user-id	:	ritwikpal
   year-of-joining: 2014
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Soumya Das
+  scholarship: NBHM
 
 
 - name	:	Sanjay Kumar Jhawar
   user-id	:	sanjayjhawar
   year-of-joining: 2014
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Srikanth K. Iyer
+  scholarship: Inspire
 
 - name	:	Sourav Hait
   user-id	:	souravhait
   year-of-joining: 2014
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: S. Thangavelu
+  scholarship: NBHM
 
 
 - name	:	Lakshmi Priya M.E.
   user-id	:	lakshmip
   year-of-joining: 2015
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Manjunath Krishnapur
+  scholarship: CSIR
 
 - name	:	Paramita Pramanick
   user-id	:	paramitap
   year-of-joining: 2015
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Gadadhar Misra
+  scholarship: NBHM
 
 - name	:	Srimala Srikanth
   user-id	:	srikanths
   year-of-joining: 2015
   programme: PhD
-  guide: Manjunath Krishnapur
-  scholarship: NBHM
+  guide: Manjunath Krishnapur 
+  scholarship: NBHM 
 
 
 - name	:	Londhe Mayuresh Mahadeo
   user-id	:	mayureshl
   year-of-joining: 2016
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Gautam Bharali
+  scholarship: NBHM
 
 
 - name	:	K. Hariram
   user-id	:	hariramk
   year-of-joining: 2016
   programme: PhD
-  guide: yet to decide
+  guide: Soumya Das
   scholarship: IISc
 
 
@@ -82,38 +82,8 @@
   user-id	:	tejag
   year-of-joining: 2016
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
-
-
-
-- name	:	Vikramjeet Singh Chandel
-  user-id	:	abelvikram
-  year-of-joining: 2009
-  programme: Integrated PhD
-  image: true
-  guide: yet to decide
-  scholarship: IISc
-
-
-
-- name	:	Md. Ramiz Reza
-  user-id	:	ramiz
-  year-of-joining: 2009
-  programme: Integrated PhD
-  image: true
-  guide: yet to decide
-  scholarship: IISc
-
-
-
-- name	:	Harshavardan R
-  user-id	:	harsha11
-  year-of-joining: 2011
-  programme: Integrated PhD
-  guide: yet to decide
-  scholarship: IISc
-
+  guide: Apoorva Khare
+  scholarship: NBHM
 
 
 - name	:	Hassain M
@@ -121,7 +91,7 @@
   year-of-joining: 2012
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: Pooja Singla
   scholarship: IISc
 
 
@@ -129,7 +99,7 @@
   user-id	:	anwoymaitra
   year-of-joining: 2012
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Gautam Bharali
   scholarship: IISc
 
 
@@ -137,7 +107,7 @@
   user-id	:	samratsen
   year-of-joining: 2012
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Gadadhar Misra
   scholarship: IISc
 
 
@@ -145,8 +115,8 @@
   user-id	:	manishkumar
   year-of-joining: 2013
   programme: Integrated PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide:
+  scholarship: 
 
 
 
@@ -155,7 +125,7 @@
   user-id	:	somnathp
   year-of-joining: 2013
   programme: Integrated PhD
-  guide: yet to decide
+  guide: M. K. Ghosh
   scholarship: IISc
 
 
@@ -164,7 +134,7 @@
   year-of-joining: 2013
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: Arvind Ayyer
   scholarship: IISc
 
 
@@ -173,7 +143,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: T. Bhattacharya 
   scholarship: IISc
 
 
@@ -181,7 +151,7 @@
   user-id	:	rahulbiswas
   year-of-joining: 2014
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Tirupathi Gudi
   scholarship: IISc
 
 
@@ -189,7 +159,7 @@
   user-id	:	nimishap
   year-of-joining: 2014
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Arvind Ayyer
   scholarship: IISc
 
 
@@ -199,7 +169,7 @@
   programme: Integrated PhD
   webpage: https://sites.google.com/view/nidhirathi/about
   image: true
-  guide: yet to decide
+  guide: M. K. Ghosh
   scholarship: IISc
 
 
@@ -208,7 +178,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   webpage: https://sites.google.com/view/rameshsau/home
-  guide: yet to decide
+  guide: Tirupathi Gudi
   scholarship: IISc
 
 - name	:	Sruthi Sekar
@@ -217,14 +187,14 @@
   programme: Integrated PhD
   webpage: https://sruthisekar.wordpress.com/
   image: true
-  guide: yet to decide
+  guide: Manjunath Krishnapur
   scholarship: IISc
 
 - name	:	Abu Sufian
   user-id	:	abusufian
   year-of-joining: 2015
   programme: Integrated PhD
-  guide: yet to decide
+  guide: A. K. Nandakumaran
   scholarship: IISc
 
 
@@ -233,7 +203,7 @@
   user-id	:	prateekv
   year-of-joining: 2015
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Apoorva Khare
   scholarship: IISc
 
 
@@ -242,15 +212,15 @@
   year-of-joining: 2015
   programme: Integrated PhD
   image: true
-  guide: yet to decide
-  scholarship: IISc
+  guide: Kaushal Verma
+  scholarship: CSIR
 
 
 - name	:	Surjadipta De Sarkar
   user-id	:	surjadiptade
   year-of-joining: 2015
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Arvind Ayyer
   scholarship: IISc
 
 
@@ -259,7 +229,7 @@
   year-of-joining: 2016
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: A. K. Nandakumaran
   scholarship: IISc
 
 
@@ -267,7 +237,7 @@
   user-id	:	pabitrab
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Subhojoy Gupta
   scholarship: IISc
 
 
@@ -275,7 +245,7 @@
   user-id	:	pranabsarkar
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Subhojoy Gupta
   scholarship: IISc
 
 
@@ -284,7 +254,7 @@
   year-of-joining: 2016
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: S. Thangavelu
   scholarship: IISc
 
 
@@ -292,7 +262,7 @@
   user-id	:	poornenduk
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Srikanth K. Iyer
   scholarship: IISc
 
 - name	:	Raghavendra Tripathi
@@ -300,14 +270,14 @@
   year-of-joining: 2016
   programme: Integrated PhD
   image: true
-  guide: yet to decide
-  scholarship: IISc
+  guide: 
+  scholarship: 
 
 - name	:	Shubham Rastogi
   user-id	:	shubhamr
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Basudeb datta
   scholarship: IISc
 
 
@@ -315,14 +285,14 @@
   user-id	:	swarnalipad
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: yet to decide
+  guide: Apoorva Khare
   scholarship: IISc
 
 - name: Ramesh Mete
   year-of-joining: 2017
   programme: Integrated PhD
   user-id: rameshmete
-  guide: yet to decide
+  guide: Manjunath Krishnapur
   scholarship: IISc
 
 
@@ -330,7 +300,7 @@
   year-of-joining: 2017
   programme: Integrated PhD
   user-id: purbab
-  guide: yet to decide
+  guide: M. K. Ghosh
   scholarship: IISc
 
 - name: Abhay Jindal
@@ -338,22 +308,22 @@
   programme: Integrated PhD
   user-id:
   email: abhayjindal.999@gmail.com
-  guide: yet to decide
+  guide: Vamsi Pritham Pingali
   scholarship: IISc
 
 - name: Babhrubahan Bose
   year-of-joining: 2017
   programme: Integrated PhD
   user-id: babhrubahanb
-  guide: yet to decide
-  scholarship: IISc
+  guide: Apoorva Khare
+  scholarship: PMRF
 
 - name : Aakanksha Jain
   user-id: aakankshaj
   year-of-joining: 2017
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: Kaushal Verma
   scholarship: IISc
 
 
@@ -362,7 +332,7 @@
   programme: Integrated PhD
   user-id: arindamm
   image: true
-  guide: yet to decide
+  guide: T. Bhattacharya
   scholarship: IISc
   
 
@@ -371,7 +341,7 @@
   year-of-joining: 2017
   programme: Integrated PhD
   image: true
-  guide: yet to decide
+  guide: Sanchayan Sen
   scholarship: IISc
 
 
@@ -379,68 +349,60 @@
   user-id: aparajitak
   year-of-joining: 2017
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: 
+  scholarship: 
 
 - name: Lakshmi Kanta Mahata
   user-id: lakshmim
   year-of-joining: 2017
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: 
+  scholarship: 
 
 
 - name: Gobinda Sau
   user-id: gobindasau
   year-of-joining: 2017
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
-
-
-- name: Kesav S. Krishnan
-  user-id: kesavk
-  year-of-joining: 2017
-  programme: PhD
-  guide: yet to decide
+  guide: Subhojoy Gupta
   scholarship: IISc
 
 - name: Sivaram P
   user-id: sivaramp
   year-of-joining: 2018
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Kaushal Verma
+  scholarship: NBHM
 
 - name: Renjith. T
   user-id: renjitht
   year-of-joining: 2018
   programme: PhD
   image: true
-  guide: yet to decide
-  scholarship: IISc
+  guide: Kaushal Verma
+  scholarship: NBHM
 
 - name: Annapurna Banik
   user-id: annapurnab
   year-of-joining: 2018
   programme: PhD
   image: true
-  guide: yet to decide
-  scholarship: IISc
+  guide: Gautam Bharali
+  scholarship: NBHM
 
 - name: Nishu Kumari
   user-id: nishukumari
   year-of-joining: 2018
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Kaushal Verma
+  scholarship: NBHM
 
 - name: Sompurkar Rajas Sandeep
   user-id: rajass
   year-of-joining: 2018
   programme: PhD
-  guide: yet to decide
-  scholarship: IISc
+  guide: Vamsi Pritham Pingali
+  scholarship: Inspire
 
 
 
