--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -2,6 +2,7 @@
   position: Inspire Fellow
   research-areas: Non-commutative geometry
   user-id: safdarquddus
+  image: true
   
 
 - name: Surjit Kumar, (Ph.D., IIT Kanpur)
