--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -68,6 +68,8 @@
   programme: PhD
   guide: Gautam Bharali
   scholarship: NBHM
+  image: true
+  webpage: http://math.iisc.ac.in/~mayuresh16/
 
 
 - name	:	K. Hariram
@@ -264,6 +266,7 @@
   programme: Integrated PhD
   guide: Srikanth K. Iyer
   scholarship: IISc
+  image: true
 
 - name	:	Raghavendra Tripathi
   user-id	:	ragavendrat
@@ -294,6 +297,7 @@
   user-id: rameshmete
   guide: Manjunath Krishnapur
   scholarship: IISc
+  image: true
 
 
 - name: Purba Banerjee
