--- a/_data/phd-alumni.yaml
+++ b/_data/phd-alumni.yaml
@@ -962,3 +962,34 @@
   title: "Eigenvalues of products of random matrices"
   advisor: Manjunath Krishnapur
   present: ISF-UGC visiting scientist, ISI, Bangalore
+
+- name: Aiyappan S
+  year: 2018
+  title: "Unfolding Operators in Various Oscillatory Domains: Homogenization of Optimal Control Problems"
+  advisor:  A. K Nandakumar
+
+- name: Vikramjeet Singh
+  year: 2018
+  title: "The Pick-Nevanlinna interpolation problems: complex-analytic methods in special domains"
+  advisor: Gautam Bharali
+
+- name: Somnath Hazra
+  year: 2018
+  title: "Homogenous Operators"
+  advisor: Gadadhar Misra
+
+- name: Monojit Bhattacharjee
+  year: 2018
+  title: "Analytic Models, Dilations, Wandering subspaces and Inner functions"
+  advisor: Gadadhar Misra
+
+- name: Gaddam Sharat
+  year: 2018
+  title: "Numerical Methods for Elliptic Varitions Inequalities in Higher Dimensions"
+  advisor: Thirupathi Gudi
+
+- name: Sandeep K. Mody
+  year: 2018
+  title: "Computation of Sparse Representations of High Dimensional Time Series Data and Experimental Applications"
+  advisor: G. Rangarajan
+
