--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -68,8 +68,6 @@
   programme: PhD
   guide: Gautam Bharali
   scholarship: NBHM
-  image: true
-  webpage: http://math.iisc.ac.in/~mayuresh16/
 
 
 - name	:	K. Hariram
@@ -78,7 +76,6 @@
   programme: PhD
   guide: Soumya Das
   scholarship: IISc
-  image: true
 
 
 - name	:	G. V. K. Teja
@@ -146,7 +143,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   image: true
-  guide: T. Bhattacharya 
+  guide: T. Bhattacharyya 
   scholarship: IISc
 
 
@@ -267,7 +264,6 @@
   programme: Integrated PhD
   guide: Srikanth K. Iyer
   scholarship: IISc
-  image: true
 
 - name	:	Raghavendra Tripathi
   user-id	:	ragavendrat
@@ -281,7 +277,7 @@
   user-id	:	shubhamr
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: Basudeb datta
+  guide: T. Bhattacharyya
   scholarship: IISc
 
 
@@ -298,7 +294,6 @@
   user-id: rameshmete
   guide: Manjunath Krishnapur
   scholarship: IISc
-  image: true
 
 
 - name: Purba Banerjee
@@ -337,7 +332,7 @@
   programme: Integrated PhD
   user-id: arindamm
   image: true
-  guide: T. Bhattacharya
+  guide: T. Bhattacharyya
   scholarship: IISc
   
 
@@ -431,7 +426,6 @@
   programme: Integrated PhD
   guide: yet to decide
   scholarship: IISc
-  image: true
 
 - name: Priyanka Chudasama
   user-id: Priyankac
