--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -155,7 +155,7 @@
   user-id	:	rahulbiswas
   year-of-joining: 2014
   programme: Integrated PhD
-  guide: Tirupathi Gudi
+  guide: Thirupathi Gudi 
   scholarship: IISc
 
 
@@ -182,7 +182,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   webpage: https://sites.google.com/view/rameshsau/home
-  guide: Tirupathi Gudi
+  guide: Thirupathi Gudi 
   scholarship: IISc
 
 - name	:	Sruthi Sekar
