--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -287,7 +287,7 @@
   year-of-joining: 2017
   programme: Integrated PhD
   user-id: rameshmete
-  guide: Manjunath Krishnapur
+  guide: Ved Datar
   scholarship: IISc
   image: true
 
