Patil sir update

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -173,7 +173,7 @@
   user-id: patil
   position: Professor
   research-areas: Commutative algebra and algebraic geometry
-  phd: Bombay
+  phd: TIFR-Bombay
   phone-ext: 3212
   office: R25
   author-names:
